# MI_WHITEBOXML_1

./: .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_contributors.py
tests/: test_linear_models.py
whiteboxml/: linear_models.py
