[tool.poetry]
name = "whiteboxml"
version = "0.1.0"
description = "Librería colaborativa de machine learning."
authors = ["WhiteBoxML Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "whiteboxml" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.2"
matplotlib = "^3.8"
pre-commit = "^3.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pre-commit = "^3.0"
ruff = "^0.3"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api" 

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.poetry.scripts]
install-hooks = "pre_commit:main"